--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -66,9 +66,9 @@
                             <% context.Cities.map((ct, idx) => { %>
                                 <% if(idx == 0){ %>
                                     <option value="">Selecione a Cidade</option>
-                                    <option value="<%= ct.city_name %>"><%= ct.city_name %></option>
+                                    <option value="<%= ct.city_name %>"  data-state="<%= ct.state_id %>"><%= ct.city_name %></option>
                                 <% } else { %>
-                                <option value="<%= ct.city_name %>"><%= ct.city_name %></option>
+                                <option value="<%= ct.city_name %>"  data-state="<%= ct.state_id %>"><%= ct.city_name %></option>
                                 <% } %>
                             <% }) %>
                         </select>
@@ -79,7 +79,7 @@
                                 <option value="">Selecione o Estado</option>
                                 <option value="<%=  st.state_name %>"><%=  st.state_name %></option>
                                 <% } else { %>
-                                    <option value="<%=  st.state_name %>"><%=  st.state_name %></option>
+                                    <option state-id="<%= st.state_id %>" value="<%=  st.state_name %>"><%=  st.state_name %></option>
                                 <% } %>
                             <% }) %>
                         </select>
