update: busca dinamica de cidades no registro de usuario

--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -112,6 +112,9 @@
                     citySelect.appendChild(option);
                 });
             })
+            .fail(() => {
+                alert("Falha na busca, tente novamente.");
+            })
         })
     </script>
 </body>
