--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -14,6 +14,9 @@
     
     <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 
 </head>
 <body>
@@ -67,16 +70,15 @@
 
             <div class="city-container">
                 <i class="fa-solid fa-location-dot" style="color: #fd5c63;"></i>
-                <select id="cities-list" class="city-ipt" placeholder="Cidade de atividade" name="cityInput">
-                    <% foundCities.map((city, idx) => { %>
-                    <option value="<%= city.city_name %>"><%= city.city_name %></option>
-                    <% }); %>
+                <select id="city-list" name="cityInput" class="city-input city-ipt"> 
+                    <option value="">Selecione a Cidade</option>
                 </select>
             </div>
             
             <div class="state-container">
                 <i class="fa-solid fa-location-arrow" style="color: #fd5c63;"></i>
-                <select id="states-list" class="state-ipt" name="stateInput">
+                <select id="state-input" class="state-ipt state-input" name="stateInput">
+                    <option value="">Selecione o Estado</option>
                     <% foundStates.map((state, idx) => { %>
                     <option value="<%= state.state_name %>"><%= state.state_name %></option>
                     <% }); %>
@@ -123,8 +125,44 @@
             <div class="submit-btn-container">
                 <input type="submit" value="Continuar" class="submit-btn">
             </div>
-
         </form>
     </div>
+
+    <script>
+        const stateSelect = document.querySelector('.state-input');
+        const citySelect = document.querySelector('.city-input')
+
+        stateSelect.addEventListener('change', (e) => {
+            let url = window.location.href;
+            if(url.slice(-1) != '/'){
+                url = '/v1/api/city';
+            }
+            else{
+                url = 'api/city';
+            }
+
+            $.post({
+                url: url,
+                data: { stateName: e.target.value },
+            })
+            .done(function(response){
+                $("#city-list").find('option').remove();
+                const option = document.createElement('option');
+                option.value = "";
+                option.textContent = "Selecione a Cidade";
+                citySelect.appendChild(option);
+                
+                response.Cities.forEach((city) => {
+                    const option = document.createElement('option');
+                    option.value = city.city_name;
+                    option.textContent = city.city_name;
+                    citySelect.appendChild(option);
+                });
+            })
+            .fail(() => {
+                alert("Falha na busca, tente novamente.");
+            })
+        })
+    </script>
 </body>
 </html>
