--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="main-header">
-        <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
+        <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
         <p class="header-title">Registro de Usuário</p>
     </div>
 
