update: busca por interesse implementada

--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -22,8 +22,10 @@
 <body>
     <div class="main-header">
         <div class="edit-container">
-            <a href="/v1/profile/<%= context.RegisterId %>"><p class="edit-btn">Perfil</p></a>
-        </div>
+            <a href="/v1/profile/<%= context.RegisterId %>">
+                <p class="edit-btn">Perfil</p>
+            </a>
+            </div>
         <div class="academic-logo-container">
             <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
         </div>
