fix: bug na criacao de perfil

--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -172,7 +172,7 @@
                 $("#course-list").find('option').remove();
                 const option = document.createElement('option');
                 option.value = "";
-                option.textContent = "Selecione a Cidade";
+                option.textContent = "Selecione o Curso";
                 courseSelect.appendChild(option);
                 
                 resp.courses.forEach((course) => {
