--- a/src/public/css/editProject.css
+++ b/src/public/css/editProject.css
@@ -171,6 +171,16 @@ a{
     border: 2px solid #D0D0D0;
 }
 
+.il-removed{
+    background-color: "#B0B0B0";
+    opacity: 0.2;
+}
+
+
+.image-container-removed{
+    border: 1px solid red;
+}
+
 .alter-image-label{
     display: none;
 }
