--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -18,7 +18,7 @@
 </head>
 <body>
     
-    <%- include('./partials/default-header') %>
+    <%- include('./partials/edit-header') %>
 
     <div class="main-container">
         <div class="profile-img-container">
