--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -32,6 +32,9 @@ a{
     margin-left: 8%;
     transition: 0.5s;
     color: #fff;
+
+    display: flex;
+    justify-content: center;
 }
 
 .home-container > a{
@@ -46,6 +49,10 @@ a{
     cursor: pointer;
 }
 
+.home-button{
+    padding: 15px;
+    margin-left: 8%;
+}
 
 .edit-container{
     color: #fff;
@@ -55,13 +62,22 @@ a{
     margin-right: 8%;
     border-radius: 5px;
     transition: 0.3s;
+
+    display: flex;
+    justify-content: center;
 }
+
 .edit-container:hover{
     color: #F0F8FF;
     background-color: #002244;
     border: 1px solid #7CB9E8;
     cursor: pointer;
     transition: 0.3s;
+}
+
+.edit-button{
+    padding: 15px;
+    margin-right: 8%;
 }
 
 .academic-logo-container{
