--- a/src/views/searchResults.ejs
+++ b/src/views/searchResults.ejs
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- socket.io -->
-    <script src="/socket.io/socket.io.js"></script>
-    
+    <script src="/socket.io/socket.io.js"></script>    
 </head>
 <body>
     <div class="main-header">
@@ -105,16 +104,26 @@
     </div>
     <script>
         document.addEventListener("DOMContentLoaded", (event) => {
-        
+            
         const maxHeith = 40;
         let visible = false;
-        
+            
         const arrowDown = document.querySelector('.fa-up-down');
         const ChatContainer = document.querySelector('.chat-container-visible');
+
+        let socket;
         arrowDown.addEventListener("click", (e) => {
             ChatContainer.style.height = visible ? 5+'vh' : maxHeith+'vh';
             visible = !visible;
-
+            if(visible){
+                socket = io();
+                socket.emit('ok', {data: "ok"});
+            }
+            else{
+                if(socket){
+                    socket.disconnect();
+                }
+            }
             /* 
                 - Se estiver visível, conecta com o servidor.
                 - Se não, desconecta ou mantém deconectado.
